# Fugio-Nodes-Visual-Programming

include/fugio/webserver/: uuid.h
plugins/: CMakeLists.txt
plugins/WebServer/: CMakeLists.txt  requestmapper.cpp  requestmapper.h  webservercontroller.cpp  webservercontroller.h  webserverplugin.cpp  webserverplugin.h
